AWS 주소 수정 -> asset으로 추가