@@ -11,7 +11,6 @@ import org.apache.http.impl.client.DefaultHttpClient;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.URI;
-import java.net.URL;
 
 /**
  * Created by Dahee Joy Cha on 2017-09-18.
@@ -19,11 +18,13 @@ import java.net.URL;
 
 public class SignUpCheck extends AsyncTask<String, Void, String> {
 
+
+    private String DBserverAddress;
+
     private String id;
     private int isNewbie=0;
 
     protected void onPreExecute() {
-
     }
 
     @Override
@@ -31,9 +32,11 @@ public class SignUpCheck extends AsyncTask<String, Void, String> {
 
         try {
             id = params[0];
+            DBserverAddress = params[1];
 
-            String link = "http://ec2-13-124-46-181.ap-northeast-2.compute.amazonaws.com/checkNewMember.php?ID=" + id;
-            URL url = new URL(link);
+            String link = DBserverAddress+"checkNewMember.php?ID=" + id;
+            Log.d("testAddress:",link);
+            //URL url = new URL(link);
             HttpClient client = new DefaultHttpClient();
             HttpGet request = new HttpGet();
             request.setURI(new URI(link));
@@ -59,26 +62,33 @@ public class SignUpCheck extends AsyncTask<String, Void, String> {
         //회원이 아닐 경우.
         if(isNewbie==-1) {
 
-            try {
-                String link = "http://ec2-13-124-46-181.ap-northeast-2.compute.amazonaws.com/signUp.php?ID="+id+"&nick=BogBog";
-                URL url = new URL(link);
-                HttpClient client = new DefaultHttpClient();
-                HttpGet request = new HttpGet();
-                request.setURI(new URI(link));
-                HttpResponse response = client.execute(request);
-                BufferedReader in = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
+            for(int i=0; i<2; i++) {
+                String phplist[] =
+                        {
+                                DBserverAddress+"signUp.php?ID=" + id +"&nick=BogBog",
+                                DBserverAddress+"signUp2.php?nick=BogBog&point=10&sex=W&wheelchair=manual"
+                        };
+                try {
+                    String link = phplist[i];
+                    //URL url = new URL(link);
+                    HttpClient client = new DefaultHttpClient();
+                    HttpGet request = new HttpGet();
+                    request.setURI(new URI(link));
+                    HttpResponse response = client.execute(request);
+                    BufferedReader in = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
 
-                StringBuffer sb = new StringBuffer("");
-                String line = "";
+                    StringBuffer sb = new StringBuffer("");
+                    String line = "";
 
-                while ((line = in.readLine()) != null) {
-                    sb.append(line);
-                    break;
+                    while ((line = in.readLine()) != null) {
+                        sb.append(line);
+                        break;
+                    }
+                    in.close();
+
+                } catch (Exception e) {
+                    return new String("Exception: " + e.getMessage());
                 }
-                in.close();
-
-            } catch (Exception e) {
-                return new String("Exception: " + e.getMessage());
             }
 
         }
